# lips

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: format.md
examples/Physik-Protokoll/4-Protokoll/repo/: .gitignore
examples/python-project/: build.bat  config.json
examples/python-project/1-prompt/repo/: prompt.md
examples/readme-updater/: config.json
examples/readme-updater/project/repo/: .gitignore
lips/: __main__.py  lips.py
lips-workspace/: config.json  format.md
lips-workspace/python-project/: config.json
lips-workspace/python-project/concept/repo/: prompt.md
lips/commands/: create.py
lips/utils/: message_from_files.py  parse_files.py  parse_md.py  parse_scripts.py  prompts.py  resolve_md.py
templates/python-project/prompt/config/: compile.md
templates/python-project/prompt/repo/: prompt.md
templates/python-project/requirement/state/: requirement.md
templates/python-project/specification/state/: README.md  features.md  flowchart.mermaid  project_structure.md
templates/python-project/specs/config/: compile.md
templates/python-web-app/requirement/config/: compile.md
templates/simple-python-project/: api-config.json
templates/simple-python-project/prompt/config/: compile.md
templates/simple-python-project/specs/config/: compile.md
